--- a/app/views/personal_admin/disbursement/show.html.erb
+++ b/app/views/personal_admin/disbursement/show.html.erb
@@ -53,7 +53,7 @@
           <td><%= @disbursement.bt_inhancement ? 'Yes' :  'No' %></td>
         </tr>
         <tr>
-          <th colspan="2">Executive Full Name:</th>
+          <th colspan="2">Co-ordinator Full Name:</th>
           <td colspan="2"><%= @disbursement.user.full_name %></td>
         </tr>
         <tr>
