--- a/app/views/personal_admin/login_entry/show.html.erb
+++ b/app/views/personal_admin/login_entry/show.html.erb
@@ -43,7 +43,7 @@
         <tr>
           <th>Channel Partner:</th>
           <td><%= @login_entry.channel_partner&.full_name %></td>
-          <th>Executive Name:</th>
+          <th>Co-ordinator Full Name:</th>
           <td><%= @login_entry.user&.full_name %></td>
         </tr>
         <tr>
