--- a/app/views/application_mailer/welcome_channel_partner.html.erb
+++ b/app/views/application_mailer/welcome_channel_partner.html.erb
@@ -1,4 +1,11 @@
 <p>Dear <%= @channel_partner.full_name %>,</p>
-<p>We GrowwCapital Consultancy Pvt. Ltd. welcome you onbord in our family.</p>
+<p>Congratulations!</p>
+<p>Your channel partner code has been generated successfully.</p>
+<p>Your code is <%= @channel_partner.code %></p>
+<p>Please keep it with you for every transaction.</p>
+<p>For any query we are here to support you.</p>
+<p><b>Support Email</b>: <a href="mailto:channelpartners@growwcapital.com">channelpartners@growwcapital.com</a></p>
+<p><b>Support Contact Number:</b><a href="tel:+919112345687">+91-91123-45687</a></p>
+<p><b>Website Link:</b> <a href="https://www.growwcapital.com">https://www.growwcapital.com</a></p>
 <p>Thanks & Regards</p>
 <p>Team GrowwCapital</p>
