--- a/app/views/personal_admin/login_entry/index.html.erb
+++ b/app/views/personal_admin/login_entry/index.html.erb
@@ -12,9 +12,11 @@
           <button type="submit" class="btn btn-info"><i class="fa fa-search" aria-hidden="true"></i></button>
         <%end%>
       </div>
-      <div class="col-md-6">
-        <%= link_to '+ New Login Entry', sales_manager_new_login_entry_path, class: 'btn btn-info float-right' %>
-      </div>
+      <% unless current_user.accountant? %>
+        <div class="col-md-6">
+          <%= link_to '+ New Login Entry', sales_manager_new_login_entry_path, class: 'btn btn-info float-right' %>
+        </div>
+      <%end%>
     </div>
     <br>
   </div>
@@ -28,6 +30,7 @@
           <th>Product Name</th>
           <th>Company Name</th>
           <th>Executive Name</th>
+          <th>Approved?</th>
           <th>Actions</th>
         </thead>
         <tbody>
@@ -37,10 +40,14 @@
               <td><%= login_entry.customer_id %></td>
               <td><%= login_entry.product_name.titleize %></td>
               <td><%= login_entry.business_name %></td>
-              <td><%= login_entry.user.full_name %></td>
+              <td><%#= login_entry.user.full_name %></td>
+              <td><b><i><%= login_entry.approved ? 'Approved' : 'Unapproved' %></i></b></td>
               <td>
-                <%= link_to 'Show', "/sales-manager/login-entry/#{login_entry.id}/show" %> |
-                <%= link_to 'Edit', "/sales-manager/login-entry/#{login_entry.id}/edit" %>
+                <%= link_to 'Show', "/sales-manager/login-entry/#{login_entry.id}/show" %>
+                <% unless current_user.accountant? %>
+                   |
+                  <%= link_to 'Edit', "/sales-manager/login-entry/#{login_entry.id}/edit" %>
+                <%end%>
                 <%if current_user.admin? %>
                  | <%= link_to 'Delete', "/sales-manager/login-entry/#{login_entry.id}/destroy", data: { confirm: 'Are you sure?' } %>
                 <%end%>
