--- a/app/views/home/career.html.erb
+++ b/app/views/home/career.html.erb
@@ -16,11 +16,13 @@
           <select class="form-control job" id="job" name="job_application[job]" required>
             <option value="">-Select Profile-</option>
             <option value="Graphics Designer">Graphics Designer</option>
+            <option value="Content Writer">Content Writer</option>
             <option value="HR Manager">HR Manager</option>
             <option value="Software Developer - Trainee">Software Developer - Trainee</option>
             <option value="Business Development Executive">Business Development Executive</option>
             <option value="Business Development Associate">Business Development Associate</option>
             <option value="Telesales Executive">Telesales Executive</option>
+            <option value="Other">Other</option>
           </select>
           <input type="submit" value="Submit" class="btn btn-custom">
         <%end%>
