--- a/app/views/application_mailer/welcome_channel_partner.html.erb
+++ b/app/views/application_mailer/welcome_channel_partner.html.erb
@@ -9,3 +9,4 @@
 <p><b>Website Link:</b> <a href="https://www.growwcapital.com">https://www.growwcapital.com</a></p>
 <p>Thanks & Regards</p>
 <p>Team GrowwCapital</p>
+<p><%= image_tag asset_url('mail/channel-partner-welcome.jpg') %></p>
