--- a/app/views/personal_admin/login_entry/show.html.erb
+++ b/app/views/personal_admin/login_entry/show.html.erb
@@ -47,6 +47,12 @@
           <td><%= @login_entry.user&.full_name %></td>
         </tr>
         <tr>
+          <th>Executive Name</th>
+          <td><%= @login_entry.executive&.full_name %></td>
+          <th>Executive Code</th>
+          <td><%= @login_entry.executive&.code %></td>
+        </tr>
+        <tr>
           <th>Login Approved?:</th>
           <td><%= @login_entry.approved ? 'Yes' : 'No' %></td>
           <th></th>
