--- a/app/views/layouts/_personal_admin_flash_messages.html.erb
+++ b/app/views/layouts/_personal_admin_flash_messages.html.erb
@@ -9,12 +9,12 @@
         </button>
       </div>
     <% elsif f[0] == 'error' %>
-      <div class="alert alert-danger" role="alert">
-        <%= f[1] %>
+      <!-- <div class="alert alert-danger" role="alert">
+        <%#= f[1] %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
-        </button>        
-      </div>
+        </button>
+      </div> -->
     <% end %>
   <% end %>
 <%end%>
