--- a/app/views/personal_admin/disbursement/index.html.erb
+++ b/app/views/personal_admin/disbursement/index.html.erb
@@ -43,10 +43,12 @@
               <td><%= disbursement&.login_entry&.product_name&.titleize %></td>
               <td><%= disbursement.disburse_amount %></td>
               <td><%= disbursement.processing_fee %></td>
-              <td><b><i><%= disbursement.payment ? 'Done' : 'Un-done' %></i></b></td>
+              <td><b><i><%= disbursement.payment ? 'Paid' : 'Un-paid' %></i></b></td>
               <td>
-                <%= link_to 'Show', "/sales-manager/disbursement/#{disbursement.id}/show" %> |
-                <%= link_to 'Edit', "/sales-manager/disbursement/#{disbursement.id}/edit" %>
+                <%= link_to 'Show', "/sales-manager/disbursement/#{disbursement.id}/show" %>
+                <% unless disbursement.payment %>
+                  | <%= link_to 'Edit', "/sales-manager/disbursement/#{disbursement.id}/edit" %>
+                <%end%>
                 <%if current_user.admin? %>
                  | <%= link_to 'Delete', "/sales-manager/disbursement/#{disbursement.id}/destroy", data: { confirm: 'Are you sure?' } %>
                 <%end%>
