--- a/app/views/personal_admin/disbursement/show.html.erb
+++ b/app/views/personal_admin/disbursement/show.html.erb
@@ -30,7 +30,7 @@
         </tr>
         <tr>
           <th>Product Type:</th>
-          <td><%= @disbursement.login_entry.product_name %></td>
+          <td><%= @disbursement.login_entry.product_name.titleize %></td>
           <th>Disbursement Amount:</th>
           <td>Rs. <%= @disbursement.disburse_amount %></td>
         </tr>
