--- a/app/views/personal_admin/login_entry/show.html.erb
+++ b/app/views/personal_admin/login_entry/show.html.erb
@@ -41,8 +41,8 @@
           <td><%= show_date(@login_entry.dob) %></td>
         </tr>
         <tr>
-          <th>Channel Partner:</th>
-          <td><%= @login_entry.channel_partner&.full_name %></td>
+          <th>Channel Partner Name / Code:</th>
+          <td><%= @login_entry.channel_partner&.full_name %><b> / </b><%= @login_entry.channel_partner&.code %></td>
           <th>Co-ordinator Full Name:</th>
           <td><%= @login_entry.user&.full_name %></td>
         </tr>
@@ -53,10 +53,10 @@
           <td><%= @login_entry.executive&.code %></td>
         </tr>
         <tr>
+          <th>Bank Name</th>
+          <td><%= @login_entry.bank&.name %></td>
           <th>Login Approved?:</th>
           <td><%= @login_entry.approved ? 'Yes' : 'No' %></td>
-          <th></th>
-          <td></td>
         </tr>
       </table>
     </div>
