--- a/app/views/personal_admin/disbursement/_form.html.erb
+++ b/app/views/personal_admin/disbursement/_form.html.erb
@@ -87,7 +87,7 @@
     <div class="col-md-4">
       <div class="form-group">
         <label>Product Name</label>
-        <%= select_tag('disbursement[product_name]', options_for_select(products(@disbursement.login_entry), @disbursement&.login_entry&.product_name), class: "form-control", disabled: true) %>
+        <%= select_tag('disbursement[product_name]', options_for_select(channel_products(@disbursement.login_entry), @disbursement&.login_entry&.product_name), class: "form-control", disabled: true) %>
         <p class='error'><%= show_errors(@disbursement, :product_name) %></p>
       </div>
     </div>
