--- a/app/views/personal_admin/disbursement/index.html.erb
+++ b/app/views/personal_admin/disbursement/index.html.erb
@@ -40,7 +40,7 @@
               <td><%= disbursement&.login_entry&.customer_full_name %></td>
               <td><%= disbursement&.login_entry&.business_name %></td>
               <td><%= disbursement&.login_entry&.city %></td>
-              <td><%= disbursement&.login_entry&.product_name&.titleize %></td>
+              <td><%= disbursement&.login_entry&.channel_partner_product.product&.name %></td>
               <td><%= disbursement.disburse_amount %></td>
               <td><%= disbursement.processing_fee %></td>
               <td><b><i><%= disbursement.payment ? 'Paid' : 'Un-paid' %></i></b></td>
