--- a/app/views/personal_admin/login_entry/index.html.erb
+++ b/app/views/personal_admin/login_entry/index.html.erb
@@ -38,7 +38,7 @@
             <tr>
               <td><%= login_entry.customer_full_name %></td>
               <td><%= login_entry.customer_id %></td>
-              <td><%= login_entry.product_name.titleize %></td>
+              <td><%= login_entry.channel_partner_product.product.name.titleize %></td>
               <td><%= login_entry.business_name %></td>
               <td><%= login_entry.executive&.full_name %></td>
               <td><b><i><%= login_entry.approved ? 'Approved' : 'Unapproved' %></i></b></td>
